improve ui for mobile view

--- a/views/includes/navbar.ejs
+++ b/views/includes/navbar.ejs
@@ -99,7 +99,7 @@
       <!-- Right Side Navbar Items -->
       <ul class="navbar-nav ms-auto text-center">
         <li class="nav-item">
-          <a class="nav-link" href="/listings/new">Airbnb your home</a>
+          <a class="nav-link" href="/listings/new">Add New Listing</a>
         </li>
         <% if (!currUser) { %>
         <li class="nav-item">
